--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.26)
+cmake_minimum_required(VERSION 3.22)
 
 project(CppGeneralHelper)
 set(CMAKE_CXX_STANDARD 20)
@@ -9,7 +9,8 @@ file (GLOB_RECURSE HELPER_SRC src/Helper/*.cpp)
 add_executable(helper_test_win_window
         ${HELPER_SRC} test/test_win_window.cpp)
 
-target_compile_definitions(helper_test_win_window PRIVATE
+target_compile_definitions(helper_test_win_window
+        PRIVATE
         ENABLE_HELPER_EXT_OPENGL
 )
 
