--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,16 @@ set(CMAKE_CXX_STANDARD 20)
 set(CPP_HELPER_LIB_NAME cpphelper)
 
 # helper lib
+
+option(CPP_HELPER_DISABLE_WINDOWS_OPENGL_SUPPORT "Disable windows openGL ext" ON)
+
 file (GLOB_RECURSE HELPER_SRC src/Helper/*.cpp)
 add_library(${CPP_HELPER_LIB_NAME} STATIC ${HELPER_SRC})
 target_include_directories(${CPP_HELPER_LIB_NAME} PUBLIC src/)
+
+if (CPP_HELPER_DISABLE_WINDOWS_OPENGL_SUPPORT)
+    target_compile_definitions(${CPP_HELPER_LIB_NAME} PRIVATE DISABLE_HELPER_WINDOWS_OPENGL_SUPPORT)
+endif ()
 
 # test proj
 
@@ -17,20 +24,3 @@ option(CPP_HELPER_ENABLE_TEST "Enable test target" OFF)
 if (CPP_HELPER_ENABLE_TEST)
     add_subdirectory(test)
 endif ()
-
-# Test Win Window
-#add_executable(helper_test_win_window
-#        ${HELPER_SRC} test/test-win-window/test_win_window.cpp)
-#
-#target_compile_definitions(helper_test_win_window
-#        PRIVATE
-#        ENABLE_HELPER_EXT_OPENGL
-#)
-#
-#target_include_directories(helper_test_win_window
-#        PRIVATE
-#        src/)
-#
-#target_include_directories(helper_test_win_window
-#        PRIVATE
-#        "${CMAKE_ANDROID_NDK}/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/")
