--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,4 +3,6 @@ cmake_minimum_required(VERSION 3.22)
 project(CppGeneralHelperTest)
 
 add_subdirectory(test-win-window)
+add_subdirectory(test-socket)
+add_subdirectory(test-string)
 
