Update window opengl

--- a/test/test-win-window-style/CMakeLists.txt
+++ b/test/test-win-window-style/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.22)
 
-set(TEST_NAME test-socket)
+set(TEST_NAME test-win-window-style)
 
 add_executable(${TEST_NAME} main.cpp)
 
