--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 3.22)
 
 project(CppGeneralHelperTest)
 
-add_subdirectory(test-win-window)
+add_subdirectory(test-win-window-style)
+add_subdirectory(test-win-window-opengl)
 add_subdirectory(test-socket)
 add_subdirectory(test-string)
 
