--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,10 @@
 cmake_minimum_required(VERSION 3.22)
 
-project(CppGeneralHelper)
-
+project(CppInfra)
 set(CMAKE_CXX_STANDARD 20)
-set(CPP_HELPER_LIB_NAME cpphelper)
 
-# helper lib
-file (GLOB_RECURSE HELPER_SRC src/Infra/*.cpp)
-add_library(${CPP_HELPER_LIB_NAME} STATIC ${HELPER_SRC})
-target_include_directories(${CPP_HELPER_LIB_NAME} PUBLIC src/)
+include_directories(./src/)
 
-# test proj
-add_subdirectory(test)
+# test
+add_executable(test_socket ./test/TestSocket.cpp)
+add_executable(test_string ./test/TestString.cpp)
