--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.22)
 project(CppInfra)
 set(CMAKE_CXX_STANDARD 20)
 
-include_directories(./src/)
+include_directories(./include/)
 
 # test
 add_executable(test_socket ./test/TestSocket.cpp)
