[Feat] Window test.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,18 @@
 cmake_minimum_required(VERSION 3.22)
 
-project(CppInfra)
-set(CMAKE_CXX_STANDARD 20)
+project (CppInfra)
+set (CMAKE_CXX_STANDARD 20)
+set (LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/artifacts/)
 
-include_directories(./include/)
+# Names
+set (TARGET_LIB_NATIVE_WIN_APP cpp_native_win_app)
 
-# test
-add_executable(test_socket ./test/TestSocket.cpp)
-add_executable(test_string ./test/TestString.cpp)
+# Source files
+file (GLOB_RECURSE NATIVE_WIN_WINDOW_SRC ./src/NativeWinApp/*.cpp)
+
+# Native win app
+add_library                 (${TARGET_LIB_NATIVE_WIN_APP} STATIC ${NATIVE_WIN_WINDOW_SRC})
+target_include_directories  (${TARGET_LIB_NATIVE_WIN_APP} PUBLIC ./include/)
+
+# Test code
+add_subdirectory (test)
