--- a/test/InfraTest/CMakeLists.txt
+++ b/test/InfraTest/CMakeLists.txt
@@ -4,3 +4,4 @@ include_directories(../../src/)
 # test
 add_executable(test_infra_socket ./TestSocket.cpp)
 add_executable(test_infra_string ./TestString.cpp)
+add_executable(test_infra_console ./TestConsole.cpp)
