Fix child process creation in Infra.

--- a/test/InfraTest/CMakeLists.txt
+++ b/test/InfraTest/CMakeLists.txt
@@ -5,3 +5,4 @@ include_directories(../../src/)
 add_executable(test_infra_socket ./TestSocket.cpp)
 add_executable(test_infra_string ./TestString.cpp)
 add_executable(test_infra_console ./TestConsole.cpp)
+add_executable(test_infra_process ./TestProcess.cpp)
