--- a/test/InfraTest/CMakeLists.txt
+++ b/test/InfraTest/CMakeLists.txt
@@ -6,3 +6,4 @@ add_executable(test_infra_socket ./TestSocket.cpp)
 add_executable(test_infra_string ./TestString.cpp)
 add_executable(test_infra_console ./TestConsole.cpp)
 add_executable(test_infra_process ./TestProcess.cpp)
+add_executable(test_infra_system ./TestSystem.cpp)
