--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,9 @@
 
-add_subdirectory(InfraTest)
-add_subdirectory(NativeWinAppTest)
-add_subdirectory(ImGuiWinAppTest)
+include_directories(../src)
+
+# test
+add_executable(test_infra_socket TestSocket.cpp)
+add_executable(test_infra_string TestString.cpp)
+add_executable(test_infra_console TestConsole.cpp)
+add_executable(test_infra_process TestProcess.cpp)
+add_executable(test_infra_system TestSystem.cpp)
