--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,5 +17,21 @@ target_include_directories  (infra PUBLIC ./include/)
 option (ENABLE_INFRA_TEST OFF)
 
 if (ENABLE_INFRA_TEST)
-    add_subdirectory (test)
+    add_executable          (test_socket ./test/TestSocket.cpp)
+    target_link_libraries   (test_socket infra)
+
+    add_executable          (test_string ./test/TestString.cpp)
+    target_link_libraries   (test_string infra)
+
+    add_executable          (test_console ./test/TestConsole.cpp)
+    target_link_libraries   (test_console infra)
+
+    add_executable          (test_process ./test/TestProcess.cpp)
+    target_link_libraries   (test_process infra)
+
+    add_executable          (test_system ./test/TestSystem.cpp)
+    target_link_libraries   (test_system infra)
+
+    add_executable          (test_command_line ./test/TestCommandLine.cpp)
+    target_link_libraries   (test_command_line infra)
 endif ()
